--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Luís Antunes",
   "license": "MIT",
   "dependencies": {
-    "db-test": "https://github.com/luisantunesdeveloper/objection-test.git#9333b71242ba45f013b6b12dbe39109e4a2d0b72",
     "koa": "next",
     "koa-bodyparser": "^2.3.0",
     "koa-logger": "^1.3.1",
@@ -18,10 +17,12 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "gulp-copy": "^1.0.0"
   },
   "scripts": {
-    "start": "gulp && node dist/app.js",
+    "start": "gulp build && node dist/app.js",
+    "debug": "gulp && node --debug dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
