--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "author": "Luís Antunes",
   "license": "MIT",
   "dependencies": {
+    "knex": "^0.12.6",
     "koa": "next",
     "koa-bodyparser": "^2.3.0",
     "koa-logger": "^1.3.1",
-    "koa-router": "^7.1.0"
+    "koa-router": "^7.1.0",
+    "objection": "^0.6.2",
+    "sqlite3": "^3.1.8",
+    "widget-knex-schema": "^1.0.5"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.22.0",
@@ -18,11 +22,11 @@
     "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-copy": "^1.0.0"
+    "gulp-sourcemaps": "^2.4.0"
   },
   "scripts": {
     "start": "gulp build && node dist/app.js",
-    "debug": "gulp && node --debug dist/app.js",
+    "debug": "gulp build && node --inspect dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
